2003/12/15 20:44 (-0500) muppetman

	* Makefile.PL: added pure_all as a dep on a few things

2003/12/15 13:44 (-0500) muppetman

	* t/22.GtkListStore.t, t/23.GtkTreeStore.t: on GTK+ 2.0.x, gtk_main()
	and friends appear to assume that gtk_init() has been called.  a plain
	GMainLoop would not do this, but these tests actually have no need for
	the main loop + idle hack in the first place.  also correct the skip
	count.

2003/12/15 13:25 (-0500) muppetman

	* xs/GtkTreeModel.xs, AUTHORS: patch from Roderich Schupp implements
	a custom marshaler for the rows-reordered signal.  applied with small
	changes.

	* xs/GtkTreeModel.xs: implement the old FIXMEd rows_reordered method.

	* xs/GtkTreeStore.xs: off-by-one error in reorder().  changed loop
	logic to be a little clearer at the expense of an extra iterator var.

	* t/22.GtkListStore.t, t/23.GtkTreeStore.t: add code to test the
	rows-reordered signal and rows_reordered method.  also removed the
	init_check guards on these two, because they don't need a display
	to run their tests.

2003/12/14 17:16 (-0500) muppetman

	* t/paned.t: wait for size-allocate instead of using timeouts... still
	trying to get this test to be robust.

2003/12/14 20:12 (+0100) kaffeetisch

	* xs/GtkTreeModel.xs: Fix a slight glitch in the API doc of
	gtk_tree_model_get.

2003/12/12 11:39 (-0500) muppetman

	* xs/GtkWidget.xs: alias values in get_flags got changed, but the
	switches on ix were not updated, leading to bugs whenever apps tried
	to read or write flag values.  fixed.  renamed get_flags to
	flags_handler (it's hidden from API docs), and created a new xsub
	named flags (aliased to get_flags) as a binding for GTK_WIDGET_FLAGS.

	A t/01.GtkWidget.t
	* MANIFEST: new test, an attempt to catch future flags regressions.

2003/12/11 18:01 (-0500) rwmcfa1

	* tools/podifystockitems.pl: was doing Gtk2 '-init' no reason to and it
	caused build (of doc) to fail when no display is set.

2003/12/11 16:53 (-0500) muppetman
